--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-router-dom": "^6.11.0",
     "react-scripts": "latest",
     "tailwindcss": "latest",
     "typescript": "latest",
