--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "jsdom": "^21.1.1",
+    "playwright": "^1.33.0",
+    "puppeteer": "^19.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
