--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "api": "^5.0.8",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
