--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.0.3",
     "jsdom": "^21.1.1",
     "playwright": "^1.33.0",
     "puppeteer": "^19.11.1",
@@ -20,6 +21,7 @@
     "react-scripts": "5.0.1",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
+    "serpapi": "^1.1.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
