--- a/package.json
+++ b/package.json
@@ -3,29 +3,11 @@
   "version": "5.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "axios": "^1.4.0",
-    "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.0.3",
-    "jsdom": "^21.1.1",
-    "playwright": "^1.33.0",
-    "puppeteer": "^19.11.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6",
-    "serpapi": "^1.1.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
+    "@faker-js/faker": "^7.6.0",
+    "@iconify/react": "^4.1.0",
+    "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "latest",
     "@testing-library/jest-dom": "latest",
     "@testing-library/react": "latest",
@@ -34,29 +16,38 @@
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "apexcharts": "^3.37.0",
     "autoprefixer": "latest",
+    "axios": "^1.4.0",
+    "change-case": "^4.1.2",
+    "cheerio": "^1.0.0-rc.12",
+    "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
+    "history": "^5.3.0",
+    "jquery-csv": "^1.0.21",
+    "jsdom": "^21.1.1",
+    "lodash": "^4.17.21",
+    "mysql": "^2.18.1",
+    "numeral": "^2.0.6",
+    "playwright": "^1.33.0",
     "postcss": "latest",
+    "promise-mysql": "^5.2.0",
+    "prop-types": "^15.8.1",
+    "puppeteer": "^19.11.1",
     "react": "latest",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "latest",
     "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.11.0",
     "react-scripts": "latest",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
+    "serpapi": "^1.1.1",
+    "simplebar-react": "^3.2.1",
     "tailwindcss": "latest",
     "typescript": "latest",
-    "web-vitals": "latest",
-    "@faker-js/faker": "^7.6.0",
-    "@iconify/react": "^4.1.0",
-    "@mui/lab": "^5.0.0-alpha.103",
-    "apexcharts": "^3.37.0",
-    "change-case": "^4.1.2",
-    "date-fns": "^2.29.3",
-    "history": "^5.3.0",
-    "lodash": "^4.17.21",
-    "numeral": "^2.0.6",
-    "prop-types": "^15.8.1",
-    "react-apexcharts": "^1.4.0",
-    "react-hook-form": "^7.43.1",
-    "simplebar-react": "^3.2.1"
+    "web-vitals": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
