--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "request-promise": "^4.2.6",
     "serpapi": "^1.1.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
     "@mui/material": "latest",
